Use `em` to avoid superhuge text 🤗
Got big enough on my laptop to make the emoji blurry 🙅‍♂️

--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ h1 {
 }
 
 .aqi-result h1 {
-  font-size: 25vw;
-  margin: 0.1vw;
+  font-size: 9em;
+  margin: 0;
 }
 
 #aqi-explanation {
